[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corroborate"
version = "0.1.0"
description = "Deterministic answer-grounding check for LLM/RAG outputs: catch hallucinated numbers, dates, and quotes without spending a cent on LLM-as-judge."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Asmit Dash" }]
license = { text = "MIT" }
keywords = ["rag", "llm", "hallucination", "grounding", "faithfulness", "lint", "eval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
pdf = ["fpdf2>=2.7"]
dev = ["pytest>=7", "fpdf2>=2.7"]

[project.urls]
Homepage = "https://github.com/asmitdash/corroborate"
Issues = "https://github.com/asmitdash/corroborate/issues"

[tool.setuptools]
py-modules = ["corroborate"]
